added a cross reference to search query interfaces (which are nearly 'bridge')
git-svn-id: https://scm.mmbase.org/mmbase/trunk@11055 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/src/org/mmbase/bridge/package.html
+++ b/src/org/mmbase/bridge/package.html
@@ -12,8 +12,9 @@
       Script languages can access MMBase in this way. JSP can e.g. do this rather directly, or a
       little less directly by use of the MMBase Taglib.
     </p>
-    <!-- version of package description $Id: package.html,v 1.1 2002-03-30 10:35:44 michiel Exp $ -->
+    <!-- version of package description $Id: package.html,v 1.2 2004-06-30 11:06:35 michiel Exp $ -->
     @since   MMBase-1.4
+    @see     org.mmbase.storage.search
     @see     org.mmbase.bridge.jsp.taglib
   </body>
 </html>
