--- a/src/org/mmbase/bridge/package.html
+++ b/src/org/mmbase/bridge/package.html
@@ -12,9 +12,8 @@
       Script languages can access MMBase in this way. JSP can e.g. do this rather directly, or a
       little less directly by use of the MMBase Taglib.
     </p>
-    <!-- version of package description $Id: package.html,v 1.2 2004-06-30 11:06:35 michiel Exp $ -->
-    @since   MMBase-1.4
-    @see     org.mmbase.storage.search
-    @see     org.mmbase.bridge.jsp.taglib
+    <!-- version of package description $Id: package.html,v 1.3 2004-09-17 09:40:04 pierre Exp $ -->
+    @since MMBase-1.4
+    @see org.mmbase.storage.search
   </body>
 </html>
