Moved MagicFile to magicfile package
git-svn-id: https://scm.mmbase.org/mmbase/trunk@15709 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/src/org/mmbase/util/magicfile/package.html
+++ b/src/org/mmbase/util/magicfile/package.html
@@ -6,7 +6,7 @@
   <body>
     <p>
       This package contains the classes needed by
-      org.mmbase.util.MagicFile. A complete package is dedicated to
+      org.mmbase.util.magicfile.MagicFile. A complete package is dedicated to
       this because it is quite a lot of code to put in one file.
     </p>
     <p>
@@ -15,7 +15,7 @@
       contains the functions to generate a magic.xml from a UNIX
       'file' file.
     </p>
-    <!-- version of package description $Id: package.html,v 1.1 2002-09-03 18:15:28 michiel Exp $ -->
-    @see     org.mmbase.util.MagicFile
+    <!-- version of package description $Id: package.html,v 1.2 2005-10-25 12:12:29 pierre Exp $ -->
+    @see     org.mmbase.util.magicfile.MagicFile
   </body>
 </html>
